--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
     <h1>Recipes for lazy girls</h1>
+    <img src="./img/lazy.jpeg" alt="woman laying down">
     <p>If you're like me you like eating, but you also hate cooking. Here are some super easy recipes so you don't starve</p>
     <p></p>
     <a href="./recipes/toast.html">Toast</a>
     <p></p>
     <a href="recipes/milkshake.html">Milkshake</a>
+    
 </body>
 </html>
